Fixes WCAG issues with sidebar toggle and link text contrast

--- a/source/stylesheets/dark.scss
+++ b/source/stylesheets/dark.scss
@@ -149,10 +149,12 @@ $color-mode-type: data;
     border-left-color: var(--bs-light-border-subtle);
   }
   p {
-    color: var(--bs-body-color);
+    /*color: var(--bs-body-color);*/
+    color: $off-white;
   }
   a {
-    color: var(--bs-link-hover-color);
+    color: $light-blue;
+    text-decoration: none;
   }
   a.anchor {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='rgb(139, 185, 254)' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-link'%3E%3Cpath d='M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71'%3E%3C/path%3E%3Cpath d='M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71'%3E%3C/path%3E%3C/svg%3E");
@@ -503,7 +505,8 @@ $color-mode-type: data;
   }
 
   #expand-code {
-    color: var(--bs-link-color);
+    /*color: var(--bs-link-color);*/
+    color: $light-blue;
   }
 
   @include media-breakpoint-up(md) {
