--- a/source/stylesheets/variables.scss
+++ b/source/stylesheets/variables.scss
@@ -4,9 +4,10 @@ $default_font: Mulish;
 $mono_font: 'Source Code Pro';
 $asset_base_path: '../assets' !default;
 
-$black: #383838;
-$blue: #0044D7;
+$black: #262626;
+$blue: #1F62FF;
 $gray: #586F7C;
+$off-white: #F0F0F0;
 $purple: #6320EE;
 $deep-purple: #491997;
 $dark-purple: #201335;
@@ -17,7 +18,7 @@ $orange: #FFB17A;
 $magenta: #CE1D9D;
 $bright-blue: #0D96F9;
 $light-gray: #F8F9F9;
-$light-blue: #3DCBF8;
+$light-blue: #7684C6;
 $light-purple: #D2BCF4;
 $dark-blue: #071159;
 $dark-green: #1D5959;
